<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pubsub_node</name>
    <version>0.0.1</version>
    <description>publish-subscribe test</description>
    <maintainer email="wk707060335@gmail.com">zhihui</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>tutorials_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>tutorials_msgs</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
